test/pending/neg/bug555.scala
object Main extends Application {
  def tata = {
    def titi = {}
  }
}
